--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,27 @@
    
    
    <body>
-      
+      <div id="header">
+         <header>
+            <h1>Fabio Orione Da Silva Netto</h1>
+         </header>
+         <nav>
+            <ul>
+               <li>Who Am I?</li>
+               <li>Objectives</li>
+               <li>Abilitys</li>
+               <li>What Did I Do?</li>
+               <li>Contact Me</li>
+            </ul>
+         </nav>
+      </div>
+
+      <main>
+
+      </main>
+
+      <footer>
+         2022 - Website Created by <b>Fabio O.S. Netto</b>
+      </footer>
    </body>
 </html>
