Content and Website Struct
Added content and semantic website struct.

--- a/html/index.html
+++ b/html/index.html
@@ -30,11 +30,74 @@
       </div>
 
       <main>
+         <section>
+            <p>FOSN 2022</p>
+            <p>Tolerância, diálogo.</p>
+            <p>Sem preconceitos, sem julgamentos.</p>
+            <p>Ver versões anteriores</p>
+         </section>
+
+
+         <div>
+            <section>
+               <p>Mantendo a robustez de sua frieza, agora com compatibilidade a compreensão emocional.</p>
+               <p>Um grande desafio, um grande resultado: sua peça cerebral foi equipada com atualizações de ponta, trazendo a sensatez da racionalidade e a inteligência emocional para operarem juntas!</p>
+            </section>
+            <section>
+               <p>
+                  As piadas são horríveis, o senso de humor é incrível, diversão não para, otimismo constantemente, mas...
+                  Seriedade, visível em seu rosto e suas expressões, grandíssimo comprometimento com seus interesses, leve pessimismo observado quando trata-se da autocobrança.
+               </p>
+            </section>
+         </div>
+
+         <article>
+            <p>
+               Depois de incessante frustação com bugs e erros, notamos que isso estava a fornecer vantagens competitivas. Portanto, foram reforçados e controlados, de forma a tornar bugs, erros propositais para consolidação de vantagens fundamentais.
+            </p>
+            <div>
+               <section>
+                  <p>Individualismo: possivelmente visualizado como egocentrismo, traz a determinação e fazer seu melhor para resolver problemas nas mais adversas situações. Custa-se em pedir ajuda. Porém, nada que impeça um bom trabalho em equipe, uma vez que tudo seja bem organizado.</p>
+               </section>
+               <section>
+                  <p>TDAH: a atenção é dispersa, muitas vezes necessitando de ambientes específicos para a produtividade (música, conforto, bebidas energéticas, chocolate...). Demora um tempo para chegar um bom foco, uma vez que este caminha junto com o prazer, mas sempre que presente, ele é um hiperfoco, ao ponto de esquecer tudo ao redor.</p>
+               </section>
+               <section>
+                  <p>Perfeccionismo: em versões anteriores, dado apenas por autocobrança. Porém, em sua versão mais recente, temos controlado os impulsos de sua mente para que tranquilamente utilize disso como vantagem para um trabalho refinado, sem cair em paranóias.</p>
+               </section>
+            </div>
+         </article>
+
+
+         <section>
+            <h2>HISTÓRIA</h2>
+            <p>
+               Inicia sua história em uma cidade pequena, ao sul do Brasil, porém, cresceu de um lado para o outro, fazendo centenas de novas amizades, adaptando-se à novas realidades.
+               Desde cedo, detalhista, sempre querendo ganhar destaque. O que justificou a influência nerd que passou a ter. Após um tempo, a influência financeira mudou gigantescamente sua realidade, ao iniciar seus estudos sobre a bolsa de valores e economia geral. Da mesma forma, posteriormente, pensando na automatização de operações financeiras, começa seus estudos na programação, que já era um desejo presente há um tempo. Seu foco foi cada vez mais a simplicidade e sofisticação, inteligência e sabedoria e não mais a superficialidade de um garoto nerd escolar. Uma mudança brusca e difícil, mas também não finalizada. De forma a estar sempre em contato com a evolução, sem demasiado apego a pensamentos e costumes atuais. De forma alguma justifica-se seu modo de pensar como correto, mas sim como o escolhido, conforme suas preferências. Hoje, focado no que considera valer a pena, estuda e aprende pelo simples prazer do processo. Diverte-se em meio a seu trabalho e hobbys, aproveitando de suas habilidades e criando novas.
+            </p>
+         </section>
+
+
+         <section>
+            <h2>HABILIDADES</h2>
+            <ul>
+               <li>Programação</li>
+               <li>(Cursos, um a um). HTML, CSS, algoritmos, JS, SQL</li>
+               <li>MQL5, C++, OOP, noções de C#</li>
+               <li>Conhecimento prático, aprendendo primeiramente sozinho, em testes. Leitura de documentação, em maior parte, inglês. (Sites teste/aprendizado).</li>
+               <li>Inglês intermediário.</li>
+               <li>Economia (educação financeira, noções de economia, grafista de análise técnica, automatização de processos).</li>
+               <li>Matemática (medalhista ouro do Prêmio ACIC de Matemática, 2 menções honrosas na OBMEP)</li>
+               <li>Desenho (centenas de horas práticas, visando hiper-realismo).</li>
+               <li>Skating (hobby de grande afeto, ao qual tem sido evoluído com grande empenho);</li>
+            </ul>
+         </section>
+
 
       </main>
 
       <footer>
-         2022 - Website Created by <b>Fabio O.S. Netto</b>
+         <p>2022 - Website Created by <b>Fabio O.S. Netto</b></p>
       </footer>
    </body>
 </html>
