--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
       <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
-      <link rel="stylesheet" href="../css/styles.css">
+      <link rel="stylesheet" href="../css/styles.css" media="screen and ()">
 
       <title>Fabio O.S. Netto</title>
    </head>
@@ -93,7 +93,10 @@
             </ul>
          </section>
 
-
+         <section>
+            <h2>Mas... e desvantagens?</h2>
+            <p>Odeia atendimento, atenção seletiva, funciona às custas no período matutino</p>
+         </section>
       </main>
 
       <footer>
