--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,11 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
       <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
-      <link rel="stylesheet" href="../css/styles.css" media="screen and ()">
+      <link rel="stylesheet" href="../css/styles-all.css"     media="screen">
+      <link rel="stylesheet" href="../css/styles-768max.css"  media="screen and (max-width: 768px)">
+      <link rel="stylesheet" href="../css/styles-768min.css"  media="screen and (min-width: 769px)">
+      <link rel="stylesheet" href="../css/styles-992min.css"  media="screen and (min-width: 992px)">
+      <link rel="stylesheet" href="../css/styles-1200min.css" media="screen and (min-width: 1200px)">
 
       <title>Fabio O.S. Netto</title>
    </head>
@@ -16,7 +20,7 @@
    <body>
       <div id="header">
          <header>
-            <h1>Fabio Orione Da Silva Netto</h1>
+            <h1>Fabio O.S. Netto</h1>
          </header>
          <nav>
             <ul>
@@ -30,7 +34,7 @@
       </div>
 
       <main>
-         <section>
+         <section id="intro_banner">
             <p>FOSN 2022</p>
             <p>Tolerância, diálogo.</p>
             <p>Sem preconceitos, sem julgamentos.</p>
@@ -38,7 +42,7 @@
          </section>
 
 
-         <div>
+         <div id="presentment">
             <section>
                <p>Mantendo a robustez de sua frieza, agora com compatibilidade a compreensão emocional.</p>
                <p>Um grande desafio, um grande resultado: sua peça cerebral foi equipada com atualizações de ponta, trazendo a sensatez da racionalidade e a inteligência emocional para operarem juntas!</p>
@@ -51,7 +55,7 @@
             </section>
          </div>
 
-         <article>
+         <article id="characteristics">
             <p>
                Depois de incessante frustação com bugs e erros, notamos que isso estava a fornecer vantagens competitivas. Portanto, foram reforçados e controlados, de forma a tornar bugs, erros propositais para consolidação de vantagens fundamentais.
             </p>
@@ -69,7 +73,7 @@
          </article>
 
 
-         <section>
+         <section id="history">
             <h2>HISTÓRIA</h2>
             <p>
                Inicia sua história em uma cidade pequena, ao sul do Brasil, porém, cresceu de um lado para o outro, fazendo centenas de novas amizades, adaptando-se à novas realidades.
@@ -78,7 +82,7 @@
          </section>
 
 
-         <section>
+         <section id="skills">
             <h2>HABILIDADES</h2>
             <ul>
                <li>Programação</li>
@@ -93,7 +97,7 @@
             </ul>
          </section>
 
-         <section>
+         <section id="disadvantages">
             <h2>Mas... e desvantagens?</h2>
             <p>Odeia atendimento, atenção seletiva, funciona às custas no período matutino</p>
          </section>
