Translation (BR-EN)

--- a/html/index.html
+++ b/html/index.html
@@ -25,9 +25,8 @@
          <nav>
             <ul>
                <li>Who Am I?</li>
-               <li>Objectives</li>
-               <li>Abilitys</li>
-               <li>What Did I Do?</li>
+               <li>Goals</li>
+               <li>Skills</li>
                <li>Contact Me</li>
             </ul>
          </nav>
@@ -36,70 +35,72 @@
       <main>
          <section id="intro_banner">
             <p>FOSN 2022</p>
-            <p>Tolerância, diálogo.</p>
-            <p>Sem preconceitos, sem julgamentos.</p>
-            <p>Ver versões anteriores</p>
+            <p>Tolerance, dialogue.</p>
+            <p>No prejudices, no judgements.</p>
+            <p>See previous versions</p>
          </section>
 
 
          <div id="presentment">
             <section>
-               <p>Mantendo a robustez de sua frieza, agora com compatibilidade a compreensão emocional.</p>
-               <p>Um grande desafio, um grande resultado: sua peça cerebral foi equipada com atualizações de ponta, trazendo a sensatez da racionalidade e a inteligência emocional para operarem juntas!</p>
+               <p>Keeping the robustess of its coldness, now with compatibility for emotional understanding</p>
+               <p>A big challenge, a big result: your brain piece has been equipped with cutting-edge upgrades, bringing your rationality and emotional intelligence to work together!</p>
             </section>
             <section>
                <p>
-                  As piadas são horríveis, o senso de humor é incrível, diversão não para, otimismo constantemente, mas...
-                  Seriedade, visível em seu rosto e suas expressões, grandíssimo comprometimento com seus interesses, leve pessimismo observado quando trata-se da autocobrança.
+                  The jokes are awful, the sense of humor is incredible, the fun never stops, optimism is constant, but...
+                  Seriousness, visible in his face and expressions, great commitment to his interests, slight pessimism observed when comes to self-demand.
                </p>
             </section>
          </div>
 
          <article id="characteristics">
             <p>
-               Depois de incessante frustação com bugs e erros, notamos que isso estava a fornecer vantagens competitivas. Portanto, foram reforçados e controlados, de forma a tornar bugs, erros propositais para consolidação de vantagens fundamentais.
+               After incessant frustration wth bugs and errors, we noticed that this waas poviding competitive advantages. Therefore, they were reinforced and controlled, in order to make bugs, deliberate errors for the consolidation of fundamental advantages.
             </p>
             <div>
                <section>
-                  <p>Individualismo: possivelmente visualizado como egocentrismo, traz a determinação e fazer seu melhor para resolver problemas nas mais adversas situações. Custa-se em pedir ajuda. Porém, nada que impeça um bom trabalho em equipe, uma vez que tudo seja bem organizado.</p>
+                  <p>Individualism: possibily viewed as self-centeredness, brings determination and ambition to do one's best to solve problems in the most adverse situations. It is difficult to ask for help, however, nothing that prevents good teamwork, once everything is well organized.</p>
                </section>
                <section>
-                  <p>TDAH: a atenção é dispersa, muitas vezes necessitando de ambientes específicos para a produtividade (música, conforto, bebidas energéticas, chocolate...). Demora um tempo para chegar um bom foco, uma vez que este caminha junto com o prazer, mas sempre que presente, ele é um hiperfoco, ao ponto de esquecer tudo ao redor.</p>
+                  <p>Diversion of Attention: attention is despersed, often requiring specific environments for productivity (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a hyperfocus, to the point of forgeting everything around.</p>
                </section>
                <section>
-                  <p>Perfeccionismo: em versões anteriores, dado apenas por autocobrança. Porém, em sua versão mais recente, temos controlado os impulsos de sua mente para que tranquilamente utilize disso como vantagem para um trabalho refinado, sem cair em paranóias.</p>
+                  <p>Perfectionism: in previous versions, given only by  self-demand. However, in its most recent version, we have controlled the impulses of his mind so that he can calmly use it as advantage for refined work, without falling into paranoia.</p>
                </section>
             </div>
          </article>
 
 
          <section id="history">
-            <h2>HISTÓRIA</h2>
+            <h2>Story</h2>
             <p>
-               Inicia sua história em uma cidade pequena, ao sul do Brasil, porém, cresceu de um lado para o outro, fazendo centenas de novas amizades, adaptando-se à novas realidades.
-               Desde cedo, detalhista, sempre querendo ganhar destaque. O que justificou a influência nerd que passou a ter. Após um tempo, a influência financeira mudou gigantescamente sua realidade, ao iniciar seus estudos sobre a bolsa de valores e economia geral. Da mesma forma, posteriormente, pensando na automatização de operações financeiras, começa seus estudos na programação, que já era um desejo presente há um tempo. Seu foco foi cada vez mais a simplicidade e sofisticação, inteligência e sabedoria e não mais a superficialidade de um garoto nerd escolar. Uma mudança brusca e difícil, mas também não finalizada. De forma a estar sempre em contato com a evolução, sem demasiado apego a pensamentos e costumes atuais. De forma alguma justifica-se seu modo de pensar como correto, mas sim como o escolhido, conforme suas preferências. Hoje, focado no que considera valer a pena, estuda e aprende pelo simples prazer do processo. Diverte-se em meio a seu trabalho e hobbys, aproveitando de suas habilidades e criando novas.
+               His story begins in a small town in the south of Brazil, however, he grew from one side to the other, making hundreds of a new friends, adapting to new realities.
+               From an early age, detail-oriented, always wanting to gain prominence, which justified the nerd influence he came to have. After a while, the financial infuence gigantically changed his reality, when he began his studies on the stock exchange and general economy. Likewise, later on, thinking about automating financial operations, he began his studies in programming, wich had already been a present desire for some time. 
+               His focus was increasingly on simplicity and sophistication, intelligence and wisdom rather than the superficiality of a nerdy schoolboy. A sudden and difficult change, but also not finalized, in order to always be in touch with evolution, without being too attached to current thoughts and customs.
+               In no way is justified his way of thinking as correct, but as the chosen one, according to his preferences. Today, focused on what he considers worthwhile, he he studies and learns for the simple pleasure of the process. He revels in his work and hobbies, takings advantage of his skills and creating new ones.
             </p>
          </section>
 
 
          <section id="skills">
-            <h2>HABILIDADES</h2>
+            <h2>Skills</h2>
             <ul>
-               <li>Programação</li>
-               <li>(Cursos, um a um). HTML, CSS, algoritmos, JS, SQL</li>
-               <li>MQL5, C++, OOP, noções de C#</li>
-               <li>Conhecimento prático, aprendendo primeiramente sozinho, em testes. Leitura de documentação, em maior parte, inglês. (Sites teste/aprendizado).</li>
-               <li>Inglês intermediário.</li>
-               <li>Economia (educação financeira, noções de economia, grafista de análise técnica, automatização de processos).</li>
-               <li>Matemática (medalhista ouro do Prêmio ACIC de Matemática, 2 menções honrosas na OBMEP)</li>
-               <li>Desenho (centenas de horas práticas, visando hiper-realismo).</li>
-               <li>Skating (hobby de grande afeto, ao qual tem sido evoluído com grande empenho);</li>
+               <li>Programming</li>
+               <li>(Courses, one by one). HTML, CSS, Algorithm, JS, SQL</li>
+               <li>MQL5, C++, OOP, notions of C#</li>
+               <li>Pratical knowledge, self learning first. Reading the language documentation, mostly, in english. (websites test/learning).</li>
+               <li>Intermediary English.</li>
+               <li>Economy (financial education, notions of economy, technical chart  analyst, process automation).</li>
+               <li>Mathmatics (Gold medalist of "Prêmio ACIC de Matemática", 2 honrable mentions on OBMEP)</li>
+               <li>Drawing (hundreds of pratical hours, aiming for hyperrealism).</li>
+               <li>Skating (hobby of great affection, to wich it has been envolved with great commitment);</li>
             </ul>
          </section>
 
          <section id="disadvantages">
-            <h2>Mas... e desvantagens?</h2>
-            <p>Odeia atendimento, atenção seletiva, funciona às custas no período matutino</p>
+            <h2>But... and disadvantages?</h2>
+            <p>He hates attendant role and his attention is selective, works difficultly at morning period, wich can lead to many other problems.</p>
          </section>
       </main>
 
