Images, intro_banner, fonts
--> 1 image edited and chose for intro_banner;
--> header font chose;
--> intro_banner font chose.

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
    
    <body>
       <div id="header">
-         <header>
+         <header class="display_flex">
             <h1>Fabio O.S. Netto</h1>
          </header>
          <nav>
@@ -34,10 +34,12 @@
 
       <main>
          <section id="intro_banner">
-            <p>FOSN 2022</p>
-            <p>Tolerance, dialogue.</p>
-            <p>No prejudices, no judgements.</p>
-            <p>See previous versions</p>
+            <div id="intro_banner_txt" class="display_flex">
+               <p>FOSN 2023</p>
+               <p>Tolerance, dialogue.</p>
+               <p>No prejudices, no judgements.</p>
+               <p>See previous versions</p>
+            </div>
          </section>
 
 
