Background Issue - Solution 001
*Background attachment fixed doesn't works correctly on mobile devices.

--> We find a solution, creating before a div and setting position fixed and z-index less than another.

--- a/html/index.html
+++ b/html/index.html
@@ -33,14 +33,15 @@
       </div>
 
       <main>
-         <section id="intro_banner">
-            <div id="intro_banner_txt" class="display_flex">
-               <p>FOSN 2023</p>
-               <p>Tolerance, dialogue.</p>
-               <p>No prejudices, no judgements.</p>
-               <p>See previous versions</p>
-            </div>
-         </section>
+         <div id="intro_banner_container" class="bgFixed"></div>
+            <section id="intro_banner">
+               <div id="intro_banner_txt" class="display_flex">
+                  <p>FOSN 2023</p>
+                  <p>Tolerance, dialogue.</p>
+                  <p>No prejudices, no judgements.</p>
+                  <p>See previous versions</p>
+               </div>
+            </section>
 
 
          <div id="presentment">
