--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <main>
-         <div id="intro_banner_container" class="bgFixed"></div>
+         <div id="intro_banner_bg" class="bgFixed"></div>
             <section id="intro_banner">
                <div id="intro_banner_txt" class="display_flex">
                   <p>FOSN 2023</p>
