--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
          <header class="display_flex">
             <h1>Fabio O.S. Netto</h1>
          </header>
-         <nav>
+         <nav class="mobile_none">
             <ul>
                <li>Who Am I?</li>
                <li>Goals</li>
@@ -47,13 +47,30 @@
          <div id="presentment">
             <section>
                <p>Keeping the robustess of its coldness, now with compatibility for emotional understanding</p>
-               <p>A big challenge, a big result: your brain piece has been equipped with cutting-edge upgrades, bringing your rationality and emotional intelligence to work together!</p>
+               <p class="mobile_none">A big challenge, a big result: your brain piece has been equipped with cutting-edge upgrades, bringing your rationality and emotional intelligence to work together!</p>
+
+               <div id="cold_emote" class="display_flex">
+                  <div id="cold"></div>
+                  <div id="big_big">
+                     <p class="mobile_block">A big challenge, a big result</p>
+                  </div>
+                  <div id="emote"></div>
+               </div>
             </section>
             <section>
-               <p>
-                  The jokes are awful, the sense of humor is incredible, the fun never stops, optimism is constant, but...
-                  Seriousness, visible in his face and expressions, great commitment to his interests, slight pessimism observed when comes to self-demand.
-               </p>
+               <div id="optimism" class="display_flex">
+                  <p>
+                     The jokes are awful, the sense of humor is incredible
+                  </p>
+                  <div id="joker"></div>
+                  <p>The fun never stops, optimism is constant, but...</p>
+               </div>
+               
+               <div id="seriousness">
+                  <p>
+                     Seriousness, visible in his face and expressions, great commitment to his interests, slight pessimism observed when comes to self-demand.
+                  </p>
+               </div>
             </section>
          </div>
 
@@ -68,7 +85,7 @@
                <section>
                   <p>Diversion of Attention: attention is despersed, often requiring specific environments for productivity (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a hyperfocus, to the point of forgeting everything around.</p>
                </section>
-               <section>
+               <section id="perfectionism">
                   <p>Perfectionism: in previous versions, given only by  self-demand. However, in its most recent version, we have controlled the impulses of his mind so that he can calmly use it as advantage for refined work, without falling into paranoia.</p>
                </section>
             </div>
