fonts and adjustments

--- a/html/index.html
+++ b/html/index.html
@@ -34,8 +34,8 @@
 
       <main>
          <div id="intro_banner_bg" class="bgFixed"></div>
-            <section id="intro_banner">
-               <div id="intro_banner_txt" class="display_flex">
+            <section id="intro_banner" class="display_flex">
+               <div id="intro_banner_txt">
                   <p>FOSN 2023</p>
                   <p>Tolerance, dialogue.</p>
                   <p>No prejudices, no judgements.</p>
@@ -46,13 +46,13 @@
 
          <div id="presentment">
             <section>
-               <p>Keeping the robustess of its coldness, now with compatibility for emotional understanding</p>
+               <p id="presentment_intro">Keeping the robustess of its coldness, now with compatibility for emotional understanding</p>
                <p class="mobile_none">A big challenge, a big result: your brain piece has been equipped with cutting-edge upgrades, bringing your rationality and emotional intelligence to work together!</p>
 
                <div id="cold_emote" class="display_flex">
                   <div id="cold"></div>
                   <div id="big_big">
-                     <p class="mobile_block">A big challenge, a big result</p>
+                     <p class="mobile_block">A big<br><strong>challenge</strong>,<br>A big<br><strong>result</strong></p>
                   </div>
                   <div id="emote"></div>
                </div>
