--- a/html/index.html
+++ b/html/index.html
@@ -34,13 +34,14 @@
 
       <main>
          <div id="intro_banner_bg" class="bgFixed"></div>
-            <section id="intro_banner" class="display_flex">
+            <section id="intro_banner">
                <div id="intro_banner_txt">
-                  <p>FOSN 2023</p>
+                  <h2>FOSN 2023</h2>
                   <p>Tolerance, dialogue.</p>
                   <p>No prejudices, no judgements.</p>
-                  <p>See previous versions</p>
                </div>
+
+               <p><a href="#">See previous versions</a></p>
             </section>
 
 
@@ -59,34 +60,34 @@
             </section>
             <section>
                <div id="optimism" class="display_flex">
-                  <p>
-                     The jokes are awful, the sense of humor is incredible
+                  <p class="ltb">
+                     The jokes are awful,<br>the sense of<br><span class="emphasis">humor</span><br>is<br><span class="emphasis">incredible</span>
                   </p>
                   <div id="joker"></div>
-                  <p>The fun never stops, optimism is constant, but...</p>
+                  <p class="trb">The <span class="emphasis">fun</span><br>never stops,<br><span class="emphasis">optimism</span><br>is<br>constant,<br>but...</p>
                </div>
                
-               <div id="seriousness">
+               <div id="seriousness" class="display_flex">
                   <p>
-                     Seriousness, visible in his face and expressions, great commitment to his interests, slight pessimism observed when comes to self-demand.
+                     Seriousness, visible in his face and expressions, <span class="emphasis">great commitment</span> to his interests,<br>slight pessimism observed when comes to self-demand.
                   </p>
                </div>
             </section>
          </div>
 
          <article id="characteristics">
-            <p>
-               After incessant frustration wth bugs and errors, we noticed that this waas poviding competitive advantages. Therefore, they were reinforced and controlled, in order to make bugs, deliberate errors for the consolidation of fundamental advantages.
+            <p id="char_intro">
+               After incessant frustration wth bugs and errors, we noticed that this was poviding competitive advantages. Therefore, they were reinforced and controlled, in order to make bugs, deliberate errors for the consolidation of fundamental advantages.
             </p>
-            <div>
-               <section>
-                  <p>Individualism: possibily viewed as self-centeredness, brings determination and ambition to do one's best to solve problems in the most adverse situations. It is difficult to ask for help, however, nothing that prevents good teamwork, once everything is well organized.</p>
+            <div id="char_slides">
+               <section id="individualism" class="display_flex">
+                  <p><strong>Individualism</strong>: possibily viewed as self-centeredness, brings determination and ambition to do one's best to solve problems in the most adverse situations. It is difficult to ask for help, however, nothing that prevents good teamwork, once everything is well organized.</p>
                </section>
-               <section>
+               <section id="diversion_attention">
                   <p>Diversion of Attention: attention is despersed, often requiring specific environments for productivity (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a hyperfocus, to the point of forgeting everything around.</p>
                </section>
-               <section id="perfectionism">
-                  <p>Perfectionism: in previous versions, given only by  self-demand. However, in its most recent version, we have controlled the impulses of his mind so that he can calmly use it as advantage for refined work, without falling into paranoia.</p>
+               <section id="perfectionism" class="display_flex">
+                  <p><strong>Perfectionism</strong>: in previous versions, given only by  self-demand. However, in its most recent version, we have controlled the impulses of his mind so that he can calmly use it as advantage for refined work, without falling into paranoia.</p>
                </section>
             </div>
          </article>
