--- a/html/index.html
+++ b/html/index.html
@@ -34,14 +34,16 @@
 
       <main>
          <div id="intro_banner_bg" class="bgFixed"></div>
-            <section id="intro_banner">
+            <section id="intro_banner" class="display_flex">
                <div id="intro_banner_txt">
                   <h2>FOSN 2023</h2>
                   <p>Tolerance, dialogue.</p>
                   <p>No prejudices, no judgements.</p>
                </div>
 
-               <p><a href="#">See previous versions</a></p>
+               <div id="intro_banner_href">
+                  <p><a href="#">See previous versions</a></p>
+               </div>
             </section>
 
 
@@ -61,7 +63,7 @@
             <section>
                <div id="optimism" class="display_flex">
                   <p class="ltb">
-                     The jokes are awful,<br>the sense of<br><span class="emphasis">humor</span><br>is<br><span class="emphasis">incredible</span>
+                     The jokes<br>are awful,<br>the sense of<br><span class="emphasis">humor</span><br>is<br><span class="emphasis">incredible</span>
                   </p>
                   <div id="joker"></div>
                   <p class="trb">The <span class="emphasis">fun</span><br>never stops,<br><span class="emphasis">optimism</span><br>is<br>constant,<br>but...</p>
