--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
    </head>
    
    
-   <body>
+   <body onload="fontSize_adjustments()" onresize="fontSize_adjustments()">
       <div id="header">
          <header class="display_flex">
             <h1>Fabio O.S. Netto</h1>
@@ -62,11 +62,11 @@
             </section>
             <section>
                <div id="optimism" class="display_flex">
-                  <p class="ltb">
+                  <p id="bef_joker" class="ltb">
                      The jokes<br>are awful,<br>the sense of<br><span class="emphasis">humor</span><br>is<br><span class="emphasis">incredible</span>
                   </p>
                   <div id="joker"></div>
-                  <p class="trb">The <span class="emphasis">fun</span><br>never stops,<br><span class="emphasis">optimism</span><br>is<br>constant,<br>but...</p>
+                  <p id="aft_joker" class="trb">The <span class="emphasis">fun</span><br>never stops,<br><span class="emphasis">optimism</span><br>is<br>constant,<br>but...</p>
                </div>
                
                <div id="seriousness" class="display_flex">
@@ -83,7 +83,9 @@
             </p>
             <div id="char_slides">
                <section id="individualism" class="display_flex">
-                  <p><strong>Individualism</strong>: possibily viewed as self-centeredness, brings determination and ambition to do one's best to solve problems in the most adverse situations. It is difficult to ask for help, however, nothing that prevents good teamwork, once everything is well organized.</p>
+                  <div id="idv_txt_container">
+                     <p><strong>Individualism</strong>: possibily viewed as self-centeredness, brings determination and ambition to do one's best to solve problems in the most adverse situations. It is difficult to ask for help, however, nothing that prevents good teamwork, once everything is well organized.</p>
+                  </div>
                </section>
                <section id="diversion_attention">
                   <p>Diversion of Attention: attention is despersed, often requiring specific environments for productivity (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a hyperfocus, to the point of forgeting everything around.</p>
@@ -131,4 +133,6 @@
          <p>2022 - Website Created by <b>Fabio O.S. Netto</b></p>
       </footer>
    </body>
+
+   <script src="../js/interactions.js"></script>
 </html>
