--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
    </head>
    
    
-   <body onload="fontSize_adjustments()" onresize="fontSize_adjustments()">
+   <body onload="adjustments()" onresize="adjustments()">
       <div id="header">
          <header class="display_flex">
             <h1>Fabio O.S. Netto</h1>
@@ -42,7 +42,7 @@
                </div>
 
                <div id="intro_banner_href">
-                  <p><a href="#">See previous versions</a></p>
+                  <p><a href="#">See previous versions (page redirecting to my instagram; reason, see my last versions on my feed)</a></p>
                </div>
             </section>
 
@@ -112,7 +112,7 @@
             <h2>Skills</h2>
             <ul>
                <li>Programming</li>
-               <li>(Courses, one by one). HTML, CSS, Algorithm, JS, SQL</li>
+               <li>(Courses and sites, one by one); (Sites: slides = GTA screen loading; text describing + background of website with paralax effect). HTML, CSS, Algorithm, JS, SQL</li>
                <li>MQL5, C++, OOP, notions of C#</li>
                <li>Pratical knowledge, self learning first. Reading the language documentation, mostly, in english. (websites test/learning).</li>
                <li>Intermediary English.</li>
