anchors, images, +details
--> Redirect to Instagram feed created on "See Previous Versions";
--> Redirect to Whatsapp on "Order Now";
--> Intro Banner background image changed;
--> "Diversion of attention" background image added;
--> All images improved;
--> More details like shadows and borders.

--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,9 @@
       <div id="header">
          <header class="display_flex">
             <h1>Fabio O.S. Netto</h1>
+            <div id="header_order_now">
+               <p><a id="order_now" href="https://api.whatsapp.com/send/?phone=5548998416704&text=Bring%20me%20that%20Experience!" target="_blank" rel="next">Order Now</a></p>
+            </div>
          </header>
          <nav class="mobile_none">
             <ul>
@@ -42,13 +45,12 @@
                </div>
 
                <div id="intro_banner_href">
-                  <p><a href="#">See previous versions (page redirecting to my instagram; reason, see my last versions on my feed)</a></p>
+                  <p><a href="../html/fosn_versions.html" rel="next" target="_blank">See previous versions</a></p>
                </div>
             </section>
 
-
          <div id="presentment">
-            <section>
+            <section id="improvement">
                <p id="presentment_intro">Keeping the robustess of its coldness, now with compatibility for emotional understanding</p>
                <p class="mobile_none">A big challenge, a big result: your brain piece has been equipped with cutting-edge upgrades, bringing your rationality and emotional intelligence to work together!</p>
 
@@ -60,6 +62,9 @@
                   <div id="emote"></div>
                </div>
             </section>
+
+            <div id="parallax_line"></div>
+
             <section>
                <div id="optimism" class="display_flex">
                   <p id="bef_joker" class="ltb">
@@ -87,11 +92,15 @@
                      <p><strong>Individualism</strong>: possibily viewed as self-centeredness, brings determination and ambition to do one's best to solve problems in the most adverse situations. It is difficult to ask for help, however, nothing that prevents good teamwork, once everything is well organized.</p>
                   </div>
                </section>
-               <section id="diversion_attention">
-                  <p>Diversion of Attention: attention is despersed, often requiring specific environments for productivity (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a hyperfocus, to the point of forgeting everything around.</p>
+               <section id="diversion_attention" class="display_flex">
+                  <div id="datt_txt_container">
+                     <p><strong>Diversion of Attention:</strong> attention is despersed, often requiring specific environments for productivity (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a hyperfocus, to the point of forgeting everything around.</p>
+                  </div>
                </section>
                <section id="perfectionism" class="display_flex">
-                  <p><strong>Perfectionism</strong>: in previous versions, given only by  self-demand. However, in its most recent version, we have controlled the impulses of his mind so that he can calmly use it as advantage for refined work, without falling into paranoia.</p>
+                  <div id="pfct_txt_container">
+                     <p><strong>Perfectionism</strong>: in previous versions, given only by  self-demand. However, in its most recent version, we have controlled the impulses of his mind so that he can calmly use it as advantage for refined work, without falling into paranoia.</p>
+                  </div>
                </section>
             </div>
          </article>
@@ -134,5 +143,5 @@
       </footer>
    </body>
 
-   <script src="../js/interactions.js"></script>
+   <script src="../js/responsiveness.js"></script>
 </html>
